# QianRuShi

./: README.md  assert.c  boot_jump.c  debug.c  debug_information.c  gpio_iic.c  gpio_iic.h  gpio_uart.c  panel  table.c  yf002_protocol.c
SuperMarket/: Main_Dialog.cpp  Main_Dialog.h  Product_Dialog.cpp  Product_Dialog.h  ReadMe.txt  SqlBase.cpp  SqlBase.h  SuperMarket.aps  SuperMarket.cpp  SuperMarket.h  SuperMarket.rc  SuperMarket.vcxproj  SuperMarket.vcxproj.filters  SuperMarketDlg.cpp  SuperMarketDlg.h  resource.h  stdafx.cpp  stdafx.h
SuperMarket/Debug/: SuperMarket.res  msado15.tlh  msado15.tli  supermarketdlg.obj.enc  vc140.idb
SuperMarket/Debug/SuperMarket.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SuperMarket.lastbuildstate  link.command.1.tlog  (+5 more)
SuperMarket/res/: SuperMarket.rc2
TelSystem/: BaseButton.cpp  BaseButton.h  InfoDialog.cpp  InfoDialog.h  RDa02468  RDa06680  ReadMe.txt  SqlBase.cpp  SqlBase.h  TelSystem.aps  TelSystem.cpp  TelSystem.h  TelSystem.rc  TelSystem.vcxproj  TelSystem.vcxproj.filters  TelSystemDlg.cpp  TelSystemDlg.h  find_dialog.cpp  find_dialog.h  resource.h  stdafx.cpp  stdafx.h
TelSystem/Debug/: TelSystem.res  vc140.idb
TelSystem/Release/: msado15.tlh  msado15.tli
TelSystem/res/: TelSystem.rc2
VideoRecoder/: ReadMe.txt  VideoRecoder.aps  VideoRecoder.cpp  VideoRecoder.h  VideoRecoder.rc  VideoRecoder.vcxproj  VideoRecoder.vcxproj.filters  VideoRecoderDlg.cpp  VideoRecoderDlg.h  resource.h  stdafx.cpp
VideoRecoder/Debug/: VideoRecoder.res  vc140.idb
VideoRecoder/res/: VideoRecoder.rc2
mqtt_espblufi/: CMakeLists.txt  partitions.csv  partitions_back.csv  sdkconfig  sdkconfig.bak  sdkconfig.old
mqtt_espblufi/main/: CMakeLists.txt  blufi_example_main.c  blufi_wifi_manage.h  cie_OTA.c  cie_OTA.h  cie_connect.c  cie_connect.h  cie_esp_OTA.c  cie_esp_OTA.h  cie_main.c  cie_mqtt.c  cie_mqtt.h  cie_mqtt_handle.c  cie_mqtt_handle.h  cie_pwm.c  cie_pwm.h  cie_scan.c  cie_scan.h  cie_sntp.c  cie_sntp.h  cie_state.c  cie_state.h  cie_tool.c  cie_tool.h  cie_uart.c  cie_uart.h  cie_wifi.c  cie_wifi.h
mqtt_espblufi/si/: cie_espblufi.IAB  cie_espblufi.IAD  cie_espblufi.IMB  cie_espblufi.IMD  cie_espblufi.PFI  cie_espblufi.PO  cie_espblufi.PR  cie_espblufi.PRI  cie_espblufi.PS  cie_espblufi.SearchResults  cie_espblufi.WK3
tool/: string.c
(+39 files in other folders)
